Updated all sensitive lists to include category - new code and current lists

--- a/source-code/py-notebook/conservation/VIC-conservation.ipynb
+++ b/source-code/py-notebook/conservation/VIC-conservation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# State Conservation Status and Sensitive Species Lists - VIC\n",
+    "# State Conservation List - VIC\n",
     "\n",
     "This notebook downloads the VIC lists from the [Victorian Government Open Data Portal](https://vba.dse.vic.gov.au/vba/downloadVSC.do) and formats them in Darwin Core for ingestion into the ALA Lists tool.\n",
     "It will save original lists to the `source-data/VIC` directory, process the lists and save them to `current-lists`.\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Split out sensitive and conservation lists"
+    "# Split out conservation list"
    ],
    "metadata": {
     "collapsed": false,
