--- a/source-code/py-notebook/conservation/WA-conservation.ipynb
+++ b/source-code/py-notebook/conservation/WA-conservation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "# WA Conservation & Sensitive Lists\n",
+    "# WA Conservation List\n",
     "\n",
     "### List Identifiers\n",
     "* Conservation list: __[dr2201](https://lists.ala.org.au/speciesListItem/list/dr2201)__ (and [dr2201 in test](https://lists-test.ala.org.au/speciesListItem/list/dr2201))\n",
@@ -581,7 +581,7 @@
    "execution_count": 17,
    "outputs": [],
    "source": [
-    "floraandfauna.to_csv(projectDir + \"current-lists/conservation-lists/WA-conservation-sensitive-20230601.csv\", encoding=\"UTF-8\",index=False)\n",
+    "floraandfauna.to_csv(projectDir + \"current-lists/conservation-lists/WA-conservation-20230601.csv\", encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing WA conservation list\")"
    ],
    "metadata": {
