--- a/source-code/py-notebook/sensitive/NT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NT-sensitive.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# NT Conservation List\n",
+    "# NT Sensitive List\n",
     "\n",
     "## List Identifiers\n",
     "* Sensitive list: __[dr492](https://lists.ala.org.au/speciesListItem/list/dr492)__ (and [dr492 in test](https://lists-test.ala.org.au/speciesListItem/list/dr492))\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -96,10 +96,10 @@
     },
     {
      "data": {
-      "text/plain": "        id                           name               commonName  \\\n0  4349407               Macroderma gigas                Ghost Bat   \n0  4349404          Hipposideros stenotis  Northern Leaf-nosed Bat   \n0  4349409         Hipposideros inornatus    Arnhem Leaf-nosed Bat   \n0  4349403         Pezoporus occidentalis             Night Parrot   \n0  4349405           Polytelis alexandrae       Alexandra's Parrot   \n0  4349406  Falco (Hierofalco) hypoleucos              Grey Falcon   \n0  4349410              Bellatorias obiri      Arnhem Land Egernia   \n0  4349411                  Attacus wardi               Atlas Moth   \n0  4349408             Ogyris iphis doddi             Dodd’s Azure   \n\n                  scientificName  \\\n0               Macroderma gigas   \n0          Hipposideros stenotis   \n0         Hipposideros inornatus   \n0         Pezoporus occidentalis   \n0           Polytelis alexandrae   \n0  Falco (Hierofalco) hypoleucos   \n0              Bellatorias obiri   \n0                  Attacus wardi   \n0             Ogyris iphis doddi   \n\n                                                lsid generalisation  \n0  https://biodiversity.org.au/afd/taxa/63bc796a-...           10km  \n0  https://biodiversity.org.au/afd/taxa/26fe0f53-...           10km  \n0  https://biodiversity.org.au/afd/taxa/5d2dab40-...           10km  \n0  https://biodiversity.org.au/afd/taxa/c630f3b0-...          100km  \n0  https://biodiversity.org.au/afd/taxa/be7a08f5-...           10km  \n0  https://biodiversity.org.au/afd/taxa/4c73a934-...           10km  \n0  https://biodiversity.org.au/afd/taxa/2afc8501-...           10km  \n0  https://biodiversity.org.au/afd/taxa/8a05008e-...           10km  \n0  https://biodiversity.org.au/afd/taxa/ae3ab4c9-...           10km  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>name</th>\n      <th>commonName</th>\n      <th>scientificName</th>\n      <th>lsid</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4349407</td>\n      <td>Macroderma gigas</td>\n      <td>Ghost Bat</td>\n      <td>Macroderma gigas</td>\n      <td>https://biodiversity.org.au/afd/taxa/63bc796a-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349404</td>\n      <td>Hipposideros stenotis</td>\n      <td>Northern Leaf-nosed Bat</td>\n      <td>Hipposideros stenotis</td>\n      <td>https://biodiversity.org.au/afd/taxa/26fe0f53-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349409</td>\n      <td>Hipposideros inornatus</td>\n      <td>Arnhem Leaf-nosed Bat</td>\n      <td>Hipposideros inornatus</td>\n      <td>https://biodiversity.org.au/afd/taxa/5d2dab40-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349403</td>\n      <td>Pezoporus occidentalis</td>\n      <td>Night Parrot</td>\n      <td>Pezoporus occidentalis</td>\n      <td>https://biodiversity.org.au/afd/taxa/c630f3b0-...</td>\n      <td>100km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349405</td>\n      <td>Polytelis alexandrae</td>\n      <td>Alexandra's Parrot</td>\n      <td>Polytelis alexandrae</td>\n      <td>https://biodiversity.org.au/afd/taxa/be7a08f5-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349406</td>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>Grey Falcon</td>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>https://biodiversity.org.au/afd/taxa/4c73a934-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349410</td>\n      <td>Bellatorias obiri</td>\n      <td>Arnhem Land Egernia</td>\n      <td>Bellatorias obiri</td>\n      <td>https://biodiversity.org.au/afd/taxa/2afc8501-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349411</td>\n      <td>Attacus wardi</td>\n      <td>Atlas Moth</td>\n      <td>Attacus wardi</td>\n      <td>https://biodiversity.org.au/afd/taxa/8a05008e-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4349408</td>\n      <td>Ogyris iphis doddi</td>\n      <td>Dodd’s Azure</td>\n      <td>Ogyris iphis doddi</td>\n      <td>https://biodiversity.org.au/afd/taxa/ae3ab4c9-...</td>\n      <td>10km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "        id                           name               commonName  \\\n0  4368099               Macroderma gigas                Ghost Bat   \n0  4368097          Hipposideros stenotis  Northern Leaf-nosed Bat   \n0  4368102         Hipposideros inornatus    Arnhem Leaf-nosed Bat   \n0  4368098         Pezoporus occidentalis             Night Parrot   \n0  4368103           Polytelis alexandrae       Alexandra's Parrot   \n0  4368096  Falco (Hierofalco) hypoleucos              Grey Falcon   \n0  4368100              Bellatorias obiri      Arnhem Land Egernia   \n0  4368101                  Attacus wardi               Atlas Moth   \n0  4368104             Ogyris iphis doddi             Dodd’s Azure   \n\n                  scientificName  \\\n0               Macroderma gigas   \n0          Hipposideros stenotis   \n0         Hipposideros inornatus   \n0         Pezoporus occidentalis   \n0           Polytelis alexandrae   \n0  Falco (Hierofalco) hypoleucos   \n0              Bellatorias obiri   \n0                  Attacus wardi   \n0             Ogyris iphis doddi   \n\n                                                lsid generalisation  \n0  https://biodiversity.org.au/afd/taxa/63bc796a-...           10km  \n0  https://biodiversity.org.au/afd/taxa/26fe0f53-...           10km  \n0  https://biodiversity.org.au/afd/taxa/5d2dab40-...           10km  \n0  https://biodiversity.org.au/afd/taxa/c630f3b0-...          100km  \n0  https://biodiversity.org.au/afd/taxa/be7a08f5-...           10km  \n0  https://biodiversity.org.au/afd/taxa/4c73a934-...           10km  \n0  https://biodiversity.org.au/afd/taxa/2afc8501-...           10km  \n0  https://biodiversity.org.au/afd/taxa/8a05008e-...           10km  \n0  https://biodiversity.org.au/afd/taxa/ae3ab4c9-...           10km  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>name</th>\n      <th>commonName</th>\n      <th>scientificName</th>\n      <th>lsid</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4368099</td>\n      <td>Macroderma gigas</td>\n      <td>Ghost Bat</td>\n      <td>Macroderma gigas</td>\n      <td>https://biodiversity.org.au/afd/taxa/63bc796a-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368097</td>\n      <td>Hipposideros stenotis</td>\n      <td>Northern Leaf-nosed Bat</td>\n      <td>Hipposideros stenotis</td>\n      <td>https://biodiversity.org.au/afd/taxa/26fe0f53-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368102</td>\n      <td>Hipposideros inornatus</td>\n      <td>Arnhem Leaf-nosed Bat</td>\n      <td>Hipposideros inornatus</td>\n      <td>https://biodiversity.org.au/afd/taxa/5d2dab40-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368098</td>\n      <td>Pezoporus occidentalis</td>\n      <td>Night Parrot</td>\n      <td>Pezoporus occidentalis</td>\n      <td>https://biodiversity.org.au/afd/taxa/c630f3b0-...</td>\n      <td>100km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368103</td>\n      <td>Polytelis alexandrae</td>\n      <td>Alexandra's Parrot</td>\n      <td>Polytelis alexandrae</td>\n      <td>https://biodiversity.org.au/afd/taxa/be7a08f5-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368096</td>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>Grey Falcon</td>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>https://biodiversity.org.au/afd/taxa/4c73a934-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368100</td>\n      <td>Bellatorias obiri</td>\n      <td>Arnhem Land Egernia</td>\n      <td>Bellatorias obiri</td>\n      <td>https://biodiversity.org.au/afd/taxa/2afc8501-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368101</td>\n      <td>Attacus wardi</td>\n      <td>Atlas Moth</td>\n      <td>Attacus wardi</td>\n      <td>https://biodiversity.org.au/afd/taxa/8a05008e-...</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>4368104</td>\n      <td>Ogyris iphis doddi</td>\n      <td>Dodd’s Azure</td>\n      <td>Ogyris iphis doddi</td>\n      <td>https://biodiversity.org.au/afd/taxa/ae3ab4c9-...</td>\n      <td>10km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,21 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "                  scientificName               commonName generalisation\n0               Macroderma gigas                Ghost Bat           10km\n0          Hipposideros stenotis  Northern Leaf-nosed Bat           10km\n0         Hipposideros inornatus    Arnhem Leaf-nosed Bat           10km\n0         Pezoporus occidentalis             Night Parrot          100km\n0           Polytelis alexandrae       Alexandra's Parrot           10km\n0  Falco (Hierofalco) hypoleucos              Grey Falcon           10km\n0              Bellatorias obiri      Arnhem Land Egernia           10km\n0                  Attacus wardi               Atlas Moth           10km\n0             Ogyris iphis doddi             Dodd’s Azure           10km",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Macroderma gigas</td>\n      <td>Ghost Bat</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Hipposideros stenotis</td>\n      <td>Northern Leaf-nosed Bat</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Hipposideros inornatus</td>\n      <td>Arnhem Leaf-nosed Bat</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Pezoporus occidentalis</td>\n      <td>Night Parrot</td>\n      <td>100km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Polytelis alexandrae</td>\n      <td>Alexandra's Parrot</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>Grey Falcon</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Bellatorias obiri</td>\n      <td>Arnhem Land Egernia</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Attacus wardi</td>\n      <td>Atlas Moth</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Ogyris iphis doddi</td>\n      <td>Dodd’s Azure</td>\n      <td>10km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                  scientificName               commonName generalisation  \\\n0               Macroderma gigas                Ghost Bat           10km   \n0          Hipposideros stenotis  Northern Leaf-nosed Bat           10km   \n0         Hipposideros inornatus    Arnhem Leaf-nosed Bat           10km   \n0         Pezoporus occidentalis             Night Parrot          100km   \n0           Polytelis alexandrae       Alexandra's Parrot           10km   \n0  Falco (Hierofalco) hypoleucos              Grey Falcon           10km   \n0              Bellatorias obiri      Arnhem Land Egernia           10km   \n0                  Attacus wardi               Atlas Moth           10km   \n0             Ogyris iphis doddi             Dodd’s Azure           10km   \n\n  category  \n0       EN  \n0       EN  \n0       EN  \n0       EN  \n0       EN  \n0       EN  \n0       EN  \n0       EN  \n0       EN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Macroderma gigas</td>\n      <td>Ghost Bat</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Hipposideros stenotis</td>\n      <td>Northern Leaf-nosed Bat</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Hipposideros inornatus</td>\n      <td>Arnhem Leaf-nosed Bat</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Pezoporus occidentalis</td>\n      <td>Night Parrot</td>\n      <td>100km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Polytelis alexandrae</td>\n      <td>Alexandra's Parrot</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Falco (Hierofalco) hypoleucos</td>\n      <td>Grey Falcon</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Bellatorias obiri</td>\n      <td>Arnhem Land Egernia</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Attacus wardi</td>\n      <td>Atlas Moth</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>Ogyris iphis doddi</td>\n      <td>Dodd’s Azure</td>\n      <td>10km</td>\n      <td>EN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sensitivelist = sensitivelist[sensitivelist.name != 'Candalides geminus']\n",
-    "sensitivelist =sensitivelist[['scientificName', 'commonName', 'generalisation']]\n",
+    "sensitivelist = sensitivelist[['scientificName', 'commonName', 'generalisation']]\n",
+    "sensitivelist['category'] = \"EN\"\n",
     "sensitivelist"
    ],
    "metadata": {
@@ -149,20 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished processing\n"
+      "Finished writing NT Sensitive list\n"
      ]
     }
    ],
    "source": [
     "#Write to CSV\n",
     "# conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",index=False)\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"NT-sensitive-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"NT-sensitive-20230614.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing NT Sensitive list')\n"
    ],
    "metadata": {
