--- a/source-code/py-notebook/sensitive/SA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/SA-sensitive.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# SA Conservation and Sensitive Lists\n",
+    "# SA Sensitive List\n",
     "Import fauna and vascular plants taxonomies from BDBSA and export lists for use in the ALA\n",
     "\n",
     "## List Identifiers\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "#import essential libraries\n",
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "    Date Listed Fauna/Flora SPECIESTYPE Sub Grouping  \\\n0      May 2013       Fauna       Birds     Cockatoo   \n1      May 2013       Fauna       Birds     Cockatoo   \n2      Feb 2021       Fauna       Birds     Cockatoo   \n3      Feb 2021       Fauna       Birds     Cockatoo   \n4      May 2013       Fauna       Birds     Cockatoo   \n..          ...         ...         ...          ...   \n217         NaN         NaN         NaN          NaN   \n218         NaN         NaN         NaN          NaN   \n219         NaN         NaN         NaN          NaN   \n220         NaN         NaN         NaN          NaN   \n221         NaN         NaN         NaN          NaN   \n\n    SA Species Code (NSXCODE)                               SPECIES  \\\n0                      Y09312    Calyptorhynchus banksii graptogyne   \n1                      C00265  Calyptorhynchus lathami halmaturinus   \n2                      S21049    Lophochroa leadbeateri leadbeateri   \n3                      E21050         Lophochroa leadbeateri mollis   \n4                      G00267                 Zanda funerea whiteae   \n..                        ...                                   ...   \n217                       NaN                                   NaN   \n218                       NaN                                   NaN   \n219                       NaN                                   NaN   \n220                       NaN                                   NaN   \n221                       NaN                                   NaN   \n\n                                           COMMON NAME  \\\n0               Red-tailed Black Cockatoo (south-east)   \n1    Glossy Black-Cockatoo (Kangaroo Island subspec...   \n2                  Major Mitchell's Cockatoo (LNE, MM)   \n3                   Major Mitchell's Cockatoo (NW, EP)   \n4                         Yellow-tailed Black Cockatoo   \n..                                                 ...   \n217                                                NaN   \n218                                                NaN   \n219                                                NaN   \n220                                                NaN   \n221                                                NaN   \n\n                   Clarifier  \n0    nesting related records  \n1    nesting related records  \n2    nesting related records  \n3    nesting related records  \n4    nesting related records  \n..                       ...  \n217                      NaN  \n218                      NaN  \n219                      NaN  \n220                      NaN  \n221                      NaN  \n\n[222 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date Listed</th>\n      <th>Fauna/Flora</th>\n      <th>SPECIESTYPE</th>\n      <th>Sub Grouping</th>\n      <th>SA Species Code (NSXCODE)</th>\n      <th>SPECIES</th>\n      <th>COMMON NAME</th>\n      <th>Clarifier</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>May 2013</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>Cockatoo</td>\n      <td>Y09312</td>\n      <td>Calyptorhynchus banksii graptogyne</td>\n      <td>Red-tailed Black Cockatoo (south-east)</td>\n      <td>nesting related records</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>May 2013</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>Cockatoo</td>\n      <td>C00265</td>\n      <td>Calyptorhynchus lathami halmaturinus</td>\n      <td>Glossy Black-Cockatoo (Kangaroo Island subspec...</td>\n      <td>nesting related records</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Feb 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>Cockatoo</td>\n      <td>S21049</td>\n      <td>Lophochroa leadbeateri leadbeateri</td>\n      <td>Major Mitchell's Cockatoo (LNE, MM)</td>\n      <td>nesting related records</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Feb 2021</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>Cockatoo</td>\n      <td>E21050</td>\n      <td>Lophochroa leadbeateri mollis</td>\n      <td>Major Mitchell's Cockatoo (NW, EP)</td>\n      <td>nesting related records</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>May 2013</td>\n      <td>Fauna</td>\n      <td>Birds</td>\n      <td>Cockatoo</td>\n      <td>G00267</td>\n      <td>Zanda funerea whiteae</td>\n      <td>Yellow-tailed Black Cockatoo</td>\n      <td>nesting related records</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>217</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>218</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>219</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>220</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>221</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>222 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "sensitivelist = sensitivelist[['SPECIES', 'COMMON NAME']]"
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "                           scientificName  \\\n0      Calyptorhynchus banksii graptogyne   \n1    Calyptorhynchus lathami halmaturinus   \n2      Lophochroa leadbeateri leadbeateri   \n3           Lophochroa leadbeateri mollis   \n4                   Zanda funerea whiteae   \n..                                    ...   \n217                                   NaN   \n218                                   NaN   \n219                                   NaN   \n220                                   NaN   \n221                                   NaN   \n\n                                        vernacularName generalisation  \n0               Red-tailed Black Cockatoo (south-east)          10 km  \n1    Glossy Black-Cockatoo (Kangaroo Island subspec...          10 km  \n2                  Major Mitchell's Cockatoo (LNE, MM)          10 km  \n3                   Major Mitchell's Cockatoo (NW, EP)          10 km  \n4                         Yellow-tailed Black Cockatoo          10 km  \n..                                                 ...            ...  \n217                                                NaN          10 km  \n218                                                NaN          10 km  \n219                                                NaN          10 km  \n220                                                NaN          10 km  \n221                                                NaN          10 km  \n\n[222 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Calyptorhynchus banksii graptogyne</td>\n      <td>Red-tailed Black Cockatoo (south-east)</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Calyptorhynchus lathami halmaturinus</td>\n      <td>Glossy Black-Cockatoo (Kangaroo Island subspec...</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Lophochroa leadbeateri leadbeateri</td>\n      <td>Major Mitchell's Cockatoo (LNE, MM)</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Lophochroa leadbeateri mollis</td>\n      <td>Major Mitchell's Cockatoo (NW, EP)</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Zanda funerea whiteae</td>\n      <td>Yellow-tailed Black Cockatoo</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>217</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>218</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>219</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>220</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>221</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n    </tr>\n  </tbody>\n</table>\n<p>222 rows × 3 columns</p>\n</div>"
+      "text/plain": "                           scientificName  \\\n0      Calyptorhynchus banksii graptogyne   \n1    Calyptorhynchus lathami halmaturinus   \n2      Lophochroa leadbeateri leadbeateri   \n3           Lophochroa leadbeateri mollis   \n4                   Zanda funerea whiteae   \n..                                    ...   \n217                                   NaN   \n218                                   NaN   \n219                                   NaN   \n220                                   NaN   \n221                                   NaN   \n\n                                        vernacularName generalisation category  \n0               Red-tailed Black Cockatoo (south-east)          10 km       C2  \n1    Glossy Black-Cockatoo (Kangaroo Island subspec...          10 km       C2  \n2                  Major Mitchell's Cockatoo (LNE, MM)          10 km       C2  \n3                   Major Mitchell's Cockatoo (NW, EP)          10 km       C2  \n4                         Yellow-tailed Black Cockatoo          10 km       C2  \n..                                                 ...            ...      ...  \n217                                                NaN          10 km       C2  \n218                                                NaN          10 km       C2  \n219                                                NaN          10 km       C2  \n220                                                NaN          10 km       C2  \n221                                                NaN          10 km       C2  \n\n[222 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Calyptorhynchus banksii graptogyne</td>\n      <td>Red-tailed Black Cockatoo (south-east)</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Calyptorhynchus lathami halmaturinus</td>\n      <td>Glossy Black-Cockatoo (Kangaroo Island subspec...</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Lophochroa leadbeateri leadbeateri</td>\n      <td>Major Mitchell's Cockatoo (LNE, MM)</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Lophochroa leadbeateri mollis</td>\n      <td>Major Mitchell's Cockatoo (NW, EP)</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Zanda funerea whiteae</td>\n      <td>Yellow-tailed Black Cockatoo</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>217</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>218</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>219</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>220</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n    <tr>\n      <th>221</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>10 km</td>\n      <td>C2</td>\n    </tr>\n  </tbody>\n</table>\n<p>222 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
     "    'COMMON NAME':'vernacularName',\n",
     "})\n",
     "sensitivelist['generalisation'] =\"10 km\"\n",
-    "\n",
+    "sensitivelist['category'] = \"C2\"\n",
     "sensitivelist"
    ],
    "metadata": {
@@ -156,11 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished writing SA Sensitive list\n"
+     ]
+    }
+   ],
    "source": [
     "# sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"SA-sensitive-20230601.csv\", encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"SA-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing SA Sensitive list\")"
    ],
    "metadata": {
