--- a/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Tas Conservation List\n",
+    "# Tas Sensitive List\n",
     "## List Identifiers\n",
     "* Sensitive list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
     "* Collection: __[dr491](https://collections.ala.org.au/public/show/dr491)__\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -104,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n       'kvpValues'],\n      dtype='object')"
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
-      "text/plain": "          scientificName             commonName generalisation\n0      Lomatia tasmanica         King's Lomatia        Withold\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km\n2     Caladenia vulgaris         Summer Fingers          10 km",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>Withold</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "          scientificName             commonName generalisation category\n0      Lomatia tasmanica         King's Lomatia       WITHHOLD       EN\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km       EN\n2     Caladenia vulgaris         Summer Fingers          10 km       EN",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>WITHHOLD</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n      <td>EN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,9 @@
    "source": [
     "sensitivelist = sensitivelist[['scientificName', 'commonName']]\n",
     "sensitivelist['generalisation'] = '10 km'\n",
+    "sensitivelist['category'] = 'EN'\n",
     "# generalisation for Lomatia is 'Withhold'\n",
-    "sensitivelist.loc[sensitivelist['scientificName'] == 'Lomatia tasmanica', 'generalisation'] = 'Withold'\n",
+    "sensitivelist.loc[sensitivelist['scientificName'] == 'Lomatia tasmanica', 'generalisation'] = 'WITHHOLD'\n",
     "sensitivelist"
    ],
    "metadata": {
@@ -155,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "          scientificName             commonName generalisation\n0      Lomatia tasmanica         King's Lomatia        Withold\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km\n2     Caladenia vulgaris         Summer Fingers          10 km",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>Withold</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "          scientificName             commonName generalisation category\n0      Lomatia tasmanica         King's Lomatia       WITHHOLD       EN\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km       EN\n2     Caladenia vulgaris         Summer Fingers          10 km       EN",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>WITHHOLD</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n      <td>EN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,19 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing to CSV\n"
+      "Writing to CSV\n",
+      "Finished writing TAS Sensitive list\n"
      ]
     }
    ],
    "source": [
     "print('Writing to CSV')\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"TAS-sensitive-20230601.csv\", encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"TAS-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing TAS Sensitive list\")"
    ],
    "metadata": {
