--- a/source-code/py-notebook/sensitive/VIC-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/VIC-sensitive.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -23,7 +23,6 @@
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
-    "import list_functions as lf\n",
     "\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
     "vicchecklisturl = \"https://vba.dse.vic.gov.au/vba/downloadVSC.do\" # gets a csv\n",
@@ -62,103 +61,22 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "22182    01/01/2010\n10432    01/02/2012\n11265    01/02/2018\n12493    01/02/2021\n18298    01/03/2017\n            ...    \n13112    31/10/2016\n159      31/10/2017\n10501    31/10/2018\n11206    31/10/2020\n15567    31/10/2022\nName: LAST_MOD, Length: 899, dtype: object"
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "# Drop columns\n",
-    "vicchecklist = vicchecklist.drop(['PARENT_TAXON_LEVEL_CDE','PARENT_TAXON_ID','ALL_DISCIPLINE_CODES',\n",
-    "                                          'TREATIES','SHORT_NAME','NVIS_GROWTHFORM','SCIENTIFIC_NME_SYNONYM',\n",
-    "                                          'COMMON_NME_SYNONYM','PRINT_ORDER_NUM', 'VIC_ADVISORY_STATUS', 'ORIGIN'],axis=1)\n",
-    "# Rename columns\n",
-    "vicchecklist = vicchecklist.rename(columns=\n",
-    "{\n",
-    "    'SCIENTIFIC_NAME':'scientificName',\n",
-    "    'FFG_ACT_STATUS':'ffgactstatus',\n",
-    "    'EPBC_ACT_STATUS': 'epbcactStatus',\n",
-    "    'TAXON_LEVEL_CDE': 'taxonRank',\n",
-    "    'ORIGIN': 'establishmentMeans',\n",
-    "    'COMMON_NME_SYNONYM': 'taxonRemarks',\n",
-    "    'COMMON_NAME':'vernacularName',\n",
-    "    'AUTHORITY':'scientificNameAuthority',\n",
-    "    'PRIMARY_DISCIPLINE': 'primaryDiscipline',\n",
-    "    'RESTRICTED_FLAG' : 'restrictedFlag',\n",
-    "    'EXTRACT_DATE': 'extractDate',\n",
-    "    'LAST_MOD':'modified'\n",
-    "})\n",
-    "vicchecklist['status'] = vicchecklist['ffgactstatus'].str.replace('(Extinct in Victoria)', '',  regex=False)\n",
-    "vicchecklist['taxonRank'] = 'species'\n",
-    "vicchecklist['status'] = vicchecklist['ffgactstatus']\n",
-    "vicchecklist['sourceStatus'] = vicchecklist['ffgactstatus']\n",
-    "\n",
-    "# reformat date\n",
-    "vicchecklist['extractDate'] = pd.to_datetime(vicchecklist['extractDate'], format='%d/%m/%Y')\n",
-    "vicchecklist['extractDate'] = vicchecklist['extractDate'].dt.strftime('%Y-%m-%d')\n",
-    "vicchecklist['modified'] = pd.to_datetime(vicchecklist['modified'], format='%d/%m/%Y')\n",
-    "vicchecklist['modified'] = vicchecklist['modified'].dt.strftime('%Y-%m-%d')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([nan, 'Extinct', 'Endangered', 'Critically Endangered',\n       'Vulnerable', 'Threatened', 'Conservation Dependent',\n       'Endangered (Extinct in Victoria)'], dtype=object)"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vicchecklist['status'].unique()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
-   "source": [
-    "vicchecklist['status'] = vicchecklist['status'].str.replace('(Extinct in Victoria)', '',  regex=False)\n",
-    "vicchecklist['status'] = vicchecklist['status'].str.strip()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "# Split out sensitive and conservation lists"
+    "# Split out sensitive list"
    ],
    "metadata": {
     "collapsed": false,
@@ -169,21 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "                            0\nsensitive list count      136\nconservation list count  1999",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>conservation list count</th>\n      <td>1999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                        0\nsensitive list count  136",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitivelist = vicchecklist[vicchecklist[\"restrictedFlag\"].notna()]\n",
-    "\n",
+    "sensitivelist = vicchecklist[vicchecklist['RESTRICTED_FLAG'].notna()]\n",
     "d = {'sensitive list count': [len(sensitivelist.index)]}\n",
     "pd.DataFrame(d).transpose()"
    ],
@@ -208,19 +125,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sensitivelist = sensitivelist[['SCIENTIFIC_NAME', 'COMMON_NAME']]\n",
+    "sensitivelist = sensitivelist.rename(columns={'SCIENTIFIC_NAME':'scientificName','COMMON_NAME':'vernacularName'})\n",
+    "sensitivelist['generalisation'] = \"1 km\"\n",
+    "sensitivelist['category'] = \"EN\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['Critically Endangered', 'Vulnerable', 'Endangered', nan],\n      dtype=object)"
+      "text/plain": "               scientificName                  vernacularName generalisation  \\\n60          Engaeus australis  Lilly Pilly Burrowing Crayfish           1 km   \n64            Engaeus fultoni        Otway Burrowing Crayfish           1 km   \n69         Engaeus mallacoota   Mallacoota Burrowing Crayfish           1 km   \n72       Engaeus phyllocercus     Narracan Burrowing Crayfish           1 km   \n74     Engaeus rostrogaleatus   Strzelecki Burrowing Crayfish           1 km   \n...                       ...                             ...            ...   \n27948  Synamphisopus ambiguus               freshwater isopod           1 km   \n27949     Synamphisopus doegi               freshwater isopod           1 km   \n28374      Varanus rosenbergi              Rosenberg's Goanna           1 km   \n28396     Vermicella annulata                     Bandy Bandy           1 km   \n28405    Victaphanta compacta               Otway Black Snail           1 km   \n\n      category  \n60          EN  \n64          EN  \n69          EN  \n72          EN  \n74          EN  \n...        ...  \n27948       EN  \n27949       EN  \n28374       EN  \n28396       EN  \n28405       EN  \n\n[136 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>60</th>\n      <td>Engaeus australis</td>\n      <td>Lilly Pilly Burrowing Crayfish</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>Engaeus fultoni</td>\n      <td>Otway Burrowing Crayfish</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Engaeus mallacoota</td>\n      <td>Mallacoota Burrowing Crayfish</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>Engaeus phyllocercus</td>\n      <td>Narracan Burrowing Crayfish</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>Engaeus rostrogaleatus</td>\n      <td>Strzelecki Burrowing Crayfish</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>27948</th>\n      <td>Synamphisopus ambiguus</td>\n      <td>freshwater isopod</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>27949</th>\n      <td>Synamphisopus doegi</td>\n      <td>freshwater isopod</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>28374</th>\n      <td>Varanus rosenbergi</td>\n      <td>Rosenberg's Goanna</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>28396</th>\n      <td>Vermicella annulata</td>\n      <td>Bandy Bandy</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n    <tr>\n      <th>28405</th>\n      <td>Victaphanta compacta</td>\n      <td>Otway Black Snail</td>\n      <td>1 km</td>\n      <td>EN</td>\n    </tr>\n  </tbody>\n</table>\n<p>136 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitivelist['status'].unique()"
+    "sensitivelist"
    ],
    "metadata": {
     "collapsed": false,
@@ -231,33 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [
-    "sensitivelist = sensitivelist[['scientificName', 'vernacularName']]\n",
-    "sensitivelist['generalisation'] = \"1 km\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished processing\n"
+      "Finished writing VIC Sensitive list\n"
      ]
     }
    ],
    "source": [
-    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive-20230614.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing VIC Sensitive list')"
    ],
    "metadata": {
